Fix grid alignment

--- a/src/components/bcgrid/BcGrid.module.css
+++ b/src/components/bcgrid/BcGrid.module.css
@@ -1,6 +1,7 @@
 .Grid {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .Grid > div {
